--- a/payment.html
+++ b/payment.html
@@ -15,7 +15,7 @@
         --highlight-color: #ffffff;
         --accent-color: #a0a0a0;
         --key-color: #9e0000;
-        --key-text-color: #bd7048;
+        --key-text-color: #507cffe2;
         --divider-color: #2a2a2a;
     }
 
